--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,16 +5,17 @@ services:
   postgresdb:
     image: postgres:12-alpine
     ports:
-    - 5432:5432
+      - 5432:5432
     environment:
       POSTGRES_PASSWORD: postgres
     volumes:
-    - pg_sagalog_test:/var/lib/postgresql-sagalog_test/data
+      - pg_sagalog_test:/var/lib/postgresql/data
+      - ./init-db-and-user.sql:/docker-entrypoint-initdb.d/init.sql
 
   adminer:
     image: adminer
     ports:
-    - 8080:8080
+      - 8080:8080
 
 volumes:
   pg_sagalog_test:
