--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -47,8 +47,7 @@ variables:
   - name:   'IntegrationTests.Database.Username'
     value:  'test'
   - name:   'IntegrationTests.Database.Password'
-    #value:  'postgres'
-    value:   'test'
+    svalue:  'postgres'
   - name:   MAVEN_CACHE_FOLDER
     value:  $(Pipeline.Workspace)/.m2/repository
   - name:   MAVEN_OPTS
