--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -69,6 +69,9 @@ jobs:
     # Steps in this Job
     steps:
 
+      # Debugging
+      - script: printenv
+
       # Authenticate Maven to Nexus using predefined Service Connections
       # (Project Settings->Pipelines->Service Connections)
       - template: maven/task-authenticate.yml@templates
