--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,7 @@
 name: $(Build.SourceBranch)-$(date:yyyyMMdd)$(rev:.r)
-parameters:
-  - name: 'mavenContainer'
-    default: 'maven:3-jdk-11'
+#parameters:
+#  - name: 'mavenContainer'
+#    default: 'maven:3-jdk-11'
 
 # Pipeline triggers on any branch and tag
 trigger:
@@ -60,6 +60,13 @@ jobs:
     # Starting a postgres service for testing
     services:
       postgres: postgres_container_for_tests
+        dockerContainerHealthcheckCommand: >-
+          pg_isready
+          --host=localhost
+          --port=5432
+          --dbname=$(IntegrationTests.Database.Todo.Name)
+          --username=$(IntegrationTests.Database.Todo.Username)
+          --quiet
     displayName:  'compile deploy app'
     container: ${{ parameters.mavenContainer }}
 
