Add comment for removing debugging code

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -70,7 +70,7 @@ jobs:
     # Steps in this Job
     steps:
 
-      # Debugging
+      # Debugging TODO: Remove before merging
       - script: printenv
 
       # Authenticate Maven to Nexus using predefined Service Connections
