Debug: Remove psql in commandline

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -70,10 +70,7 @@ jobs:
     steps:
 
       # Debugging TODO: Remove before merging
-      - script: |
-          apt install -y postgresql-client
-          psql --host=localhost --username=test --command="SELECT 1;"
-          printenv
+      - script: printenv
       # Authenticate Maven to Nexus using predefined Service Connections
       # (Project Settings->Pipelines->Service Connections)
       - template: maven/task-authenticate.yml@templates
