--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -64,7 +64,7 @@ jobs:
 
     # Steps in this Job
     steps:
-      - # Setting JDK version to JDK 11
+      # Setting JDK version to JDK 11
       - script: |
           echo "##vso[task.setvariable variable=JAVA_HOME]$(JAVA_HOME_11_X64)"
           echo "##vso[task.setvariable variable=PATH]$(JAVA_HOME_11_X64)/bin:$(PATH)"
