--- a/pom.xml
+++ b/pom.xml
@@ -202,7 +202,8 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <version>3.0.0-M5</version>
                         <configuration>
-                            <forkCount>0</forkCount><!-- Possible workaround for "Corrupted STDOUT by directly writing to native stream in forked JVM 1" -->
+                            <!--<forkCount>0</forkCount>--><!-- Possible workaround for "Corrupted STDOUT by directly writing to native stream in forked JVM 1" -->
+                            <forkCount>1</forkCount><!-- Possible workaround for "Corrupted STDOUT by directly writing to native stream in forked JVM 1" -->
                             <argLine>
                                 ${argLine}
                                 --illegal-access=deny
@@ -282,7 +283,8 @@
                 <version>2.19.1</version> <!-- Newer version do not yet work with Java 11 -->
                 <configuration>
                     <excludedGroups>integration</excludedGroups>
-                    <forkCount>0</forkCount><!-- Possible workaround for "Corrupted STDOUT by directly writing to native stream in forked JVM 1" -->
+                    <!--<forkCount>0</forkCount>--><!-- Possible workaround for "Corrupted STDOUT by directly writing to native stream in forked JVM 1" -->
+                    <forkCount>1</forkCount><!-- Possible workaround for "Corrupted STDOUT by directly writing to native stream in forked JVM 1" -->
                 </configuration>
             </plugin>
             <plugin>
